# Videcoding-Hackathon

./: .gitignore  README.md  file_structure.txt  vercel.json
backend/: .gitignore  README.md  pyproject.toml  test_chat.html
backend/app/: main.py
backend/app/api/: auth.py  deps.py  rooms.py  users.py
backend/app/core/: security.py
backend/app/db/: models.py  session.py
backend/app/redis_cache/: connection.py  manager.py
backend/app/sockets/: chat.py  server.py
backend/app/utils/: identity.py
docs/: ai-prompts.md
frontend/: README.md  app.js  auth-utils.js  index.html  package-lock.json  package.json  styles.css
frontend/scripts/: capture-screenshots.mjs
frontend/tests/: auth-utils.test.js
